--- a/css/main.css
+++ b/css/main.css
@@ -1127,6 +1127,7 @@ h1.intro-header::before {
   width: 100%;
   height: 72px;
   background-color: #111111;
+  opacity: 0.95;
   position: fixed;
   left: 50%;
   -webkit-transform: translateX(-50%);
